--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,4 +7,4 @@
   data-show-faces="true">
 </div>
 
-<div class="fb-comments" data-href="http://localhost:3000/home" data-numposts="8"></div>
+<div class="fb-comments" data-href="https://protected-lowlands-45584.herokuapp.com/" data-numposts="5"></div>
