--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 <meta property="fb:app_id" content="1906292329591719" />
 <meta property="og:url" content="https://protected-lowlands-45584.herokuapp.com/" />
-<meta property="og:title" content="bla" />
+<meta property="og:title" content="TestApp" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="blasblabl" />
 <meta property="og:image" content="https://www.google.com.au/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiBsIOPzsHUAhVFpJQKHfTJBS0QjRwIBw&url=https%3A%2F%2Fperlmaven.com%2Ffetching-pictures-from-flickr&psig=AFQjCNHZleNKtjcaSozSuEACyTFgP3tmPg&ust=1497676564738115" />
