Add share button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <%= yield %>
-
+<div class="fb-share-button" data-href="https://protected-lowlands-45584.herokuapp.com/comment" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fprotected-lowlands-45584.herokuapp.com%2Fcomment&amp;src=sdkpreparse">Share</a></div>
 </body>
 
 </html>
