Add connect facebook

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 <meta property="og:description" content="blasblabl" />
 <meta property="og:image" content="https://www.google.com.au/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiBsIOPzsHUAhVFpJQKHfTJBS0QjRwIBw&url=https%3A%2F%2Fperlmaven.com%2Ffetching-pictures-from-flickr&psig=AFQjCNHZleNKtjcaSozSuEACyTFgP3tmPg&ust=1497676564738115" />
 </head>
+<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+
 <body>
 <div id="fb-root"></div>
 <script>
